--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@nx/node": "16.2.2",
     "@nx/webpack": "16.2.2",
     "@nx/workspace": "16.4.0",
+    "@sveltejs/adapter-static": "^2.0.3",
+    "@tauri-apps/cli": "^1.4.0",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
