--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "nx": "16.4.0",
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
+    "prisma": "^5.2.0",
+    "prisma-dbml-generator": "^0.10.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.1.3"
@@ -36,6 +38,10 @@
     "@nestjs/common": "^9.4.2",
     "@nestjs/core": "^9.4.2",
     "@nestjs/platform-express": "^9.1.1",
+    "@nxext/sveltekit": "14.0.0-next.2",
+    "@prisma/client": "5.2.0",
+    "@prisma/generator-helper": "^5.2.0",
+    "@prisma/internals": "^5.2.0",
     "axios": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
