--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fasterd/source",
+  "name": "@faster/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
@@ -55,7 +55,6 @@
     "postcss-preset-env": "~7.5.0",
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
-    "primeng": "^16.3.1",
     "prisma": "^5.2.0",
     "prisma-dbml-generator": "^0.10.0",
     "tailwindcss": "^3.3.3",
@@ -72,7 +71,9 @@
     "@angular/forms": "~16.2.0",
     "@angular/platform-browser": "~16.2.4",
     "@angular/platform-browser-dynamic": "~16.2.0",
+    "@angular/pwa": "^16.2.1",
     "@angular/router": "~16.2.0",
+    "@angular/service-worker": "^16.2.4",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
@@ -85,12 +86,15 @@
     "@fullcalendar/list": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
     "@fullcalendar/web-component": "^6.1.8",
+    "@mui/material": "^5.10.14",
     "@nestjs/common": "^9.4.2",
     "@nestjs/core": "^9.4.2",
     "@nestjs/platform-express": "^9.1.1",
     "@ngrx/effects": "^16.2.0",
     "@ngrx/store": "^16.2.0",
     "@ngrx/store-devtools": "^16.2.0",
+    "@ngx-formly/core": "^6.1.8",
+    "@ngx-formly/primeng": "^6.1.8",
     "@prisma/client": "5.2.0",
     "@prisma/generator-helper": "^5.2.0",
     "@prisma/internals": "^5.2.0",
@@ -99,7 +103,9 @@
     "ag-grid-angular": "^30.1.0",
     "ag-grid-community": "^30.1.0",
     "axios": "^1.0.0",
+    "daisyui": "^3.7.3",
     "primeicons": "^6.0.1",
+    "primeng": "^16.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
