--- a/ui/package.json
+++ b/ui/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^16.2.0",
-    "@angular/core": "^16.2.0"
-  },
-  "dependencies": {
+    "@angular/core": "^16.2.0",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@mui/material": "^5.14.8",
     "@ngx-formly/core": "^6.1.8",
     "@ngx-formly/primeng": "^6.1.8",
+    "daisyui": "^3.7.3",
+    "postcss-nesting": "^12.0.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.3.1",
     "tslib": "^2.3.0"
